--- a/index.html
+++ b/index.html
@@ -9,27 +9,24 @@
     </header>
     <nav>
       <div id="topnav"=>
-            <a class="active" href="./index.html">About</a>
-            <a href="./portfolio.html">Portfolio</a>
-            <a href="./contact.html">Contact</a>
+            <a class="click" id="active" href="./index.html">About</a>
+            <a class="click " href="./portfolio.html">Portfolio</a>
+            <a class="click " href="./contact.html">Contact</a>
         </div>
         <div>
             <h2 id="name">Dania King</h2>
         </div>
     </nav>
     <section id="mainback">
-      Main Background
       <article id="mainsection">
         <div>
-        <h3>
+        <h2>
           About Me
-        </h3>
+        </h2>
         </div>
         <hr />
-        <div id="imgs">
+        <div id="content">
           <img src="./assets/images/20200106_085458.jpg" alt="DaniaKing" />
-        </div>
-        <aside>
           <p>
             Lorem ipsum dolor sit amet, vocibus mandamus vis ex. Duo ex facer
             salutandi salutatus, agam dignissim sea cu, brute numquam gloriatur
@@ -42,11 +39,11 @@
             illum scaevola honestatis. Verear ornatus an his, iudico
             reprehendunt et pri.
           </p>
-        </aside>
+          </div>
       </article>
     </section>
     <footer>
-      copyright
+      <div id="cop">copyright</div> 
     </footer>
   </body>
 </html>
