--- a/contact.html
+++ b/contact.html
@@ -3,42 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/contact.css" />
   </head>
   <body>
-    <header>
-    </header>
+    <header></header>
     <nav>
-      <div id="topnav"=>
-            <a class="click" id="active" href="./index.html">About</a>
-            <a class="click " href="./portfolio.html">Portfolio</a>
-            <a class="click " href="./contact.html">Contact</a>
-        </div>
-        <div>
-            <h2 id="name">Dania King</h2>
-        </div>
+      <div id="topnav">
+        <a class="click" id="active" href="./index.html">About</a>
+        <a class="click " href="./portfolio.html">Portfolio</a>
+        <a class="click " href="./contact.html">Contact</a>
+      </div>
+      <div>
+        <h2 id="name">Dania King</h2>
+      </div>
     </nav>
     <section id="mainback">
-        <article id="mainsection">
-            <div>
-            <h2>
+      <article id="mainsection">
+        <div>
+          <h2>
             Contact
-            </h2>
-            </div>
-            <hr />
-            <form>
-                Name:<br>
-                <input class="sing" type="text" name="Name"><br>
-                Email:<br>
-                <input class="sing" type="text" name="email"><br>
-                Message:<br>
-                <textarea id="mes" name="message" rows="10" cols="30"></textarea><br>
-                <input id="but" type="submit" value="Submit">
-            </form>
-        </article>
+          </h2>
+        </div>
+        <hr />
+        <form>
+          Name:<br />
+          <input class="sing" type="text" name="Name" /><br />
+          Email:<br />
+          <input class="sing" type="text" name="email" /><br />
+          Message:<br />
+          <textarea id="mes" name="message" rows="10" cols="30"></textarea
+          ><br />
+          <input id="but" type="submit" value="Submit" />
+        </form>
+      </article>
     </section>
     <footer>
-        <div id="cop">copyright</div> 
-      </footer>
-    </body>
+      <div id="cop">copyright &copy;</div>
+    </footer>
+  </body>
 </html>
