--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   </head>
   <body>
-    <header>
-    </header>
+    <header></header>
     <nav>
-      <div id="topnav"=>
-            <a class="click" id="active" href="./index.html">About</a>
-            <a class="click " href="./portfolio.html">Portfolio</a>
-            <a class="click " href="./contact.html">Contact</a>
-        </div>
-        <div>
-            <h2 id="name">Dania King</h2>
-        </div>
+      <div id="topnav">
+        <a class="click" id="active" href="./index.html">About</a>
+        <a class="click " href="./portfolio.html">Portfolio</a>
+        <a class="click " href="./contact.html">Contact</a>
+      </div>
+      <div>
+        <h2 id="name">Dania King</h2>
+      </div>
     </nav>
     <section id="mainback">
       <article id="mainsection">
         <div>
-        <h2>
-          About Me
-        </h2>
+          <h2>
+            About Me
+          </h2>
         </div>
         <hr />
         <div id="content">
@@ -39,23 +38,11 @@
             illum scaevola honestatis. Verear ornatus an his, iudico
             reprehendunt et pri.
           </p>
-          <p>
-              Lorem ipsum dolor sit amet, vocibus mandamus vis ex. Duo ex facer
-              salutandi salutatus, agam dignissim sea cu, brute numquam gloriatur
-              in eos. Per ad eius fastidii, vim ei inermis copiosae. At assentior
-              constituam scriptorem est. Ei eos minim euismod, debitis scriptorem
-              ad pri, appetere rationibus vel in. Cu ubique impetus instructior
-              pro, mel etiam deserunt instructior at, pri quis everti eu. Ex
-              ignota laoreet pro, eu tantas mentitum nam, ne vel meis decore. Ne
-              causae petentium salutatus quo, tritani splendide sit id. Qui ne
-              illum scaevola honestatis. Verear ornatus an his, iudico
-              reprehendunt et pri.
-            </p>
-          </div>
+        </div>
       </article>
     </section>
     <footer>
-      <div id="cop">copyright</div> 
+      <div id="cop">copyright &copy;</div>
     </footer>
   </body>
 </html>
