--- a/portfolio.html
+++ b/portfolio.html
@@ -3,34 +3,53 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="./assets/css/port.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/port.css" />
   </head>
   <body>
-    <header>
-    </header>
+    <header></header>
     <nav>
-      <div id="topnav"=>
-            <a class="click" id="active" href="./index.html">About</a>
-            <a class="click " href="./portfolio.html">Portfolio</a>
-            <a class="click " href="./contact.html">Contact</a>
-        </div>
-        <div>
-            <h2 id="name">Dania King</h2>
-        </div>
+      <div id="topnav">
+        <a class="click" id="active" href="./index.html">About</a>
+        <a class="click " href="./portfolio.html">Portfolio</a>
+        <a class="click " href="./contact.html">Contact</a>
+      </div>
+      <div>
+        <h2 id="name">Dania King</h2>
+      </div>
     </nav>
     <section id="mainback">
-        <article id="mainsection">
-            <div>
-            <h2>
+      <article id="mainsection">
+        <div>
+          <h2>
             Portfolio
-            </h2>
-            </div>
-            <hr />
-            
-            </article>
-            </section>
-            <footer>
-                <div id="cop">copyright</div> 
-            </footer>
-     </body>
+          </h2>
+        </div>
+        <hr />
+        <div class="row1">
+          <div class="tile">
+            <p class="title" id="games">Games</p>
+          </div>
+          <div class="tile">
+            <p class="title" id="pics">Pictures</p>
+          </div>
+        </div>
+        <div class="row1">
+          <div class="tile">
+            <p class="title" id="web">Webpages</p>
+          </div>
+          <div class="tile">
+            <p class="title" id="pin">Pins</p>
+          </div>
+        </div>
+        <div class="row1">
+          <div class="tile">
+            <p class="title" id="fav">Favorites</p>
+          </div>
+        </div>
+      </article>
+    </section>
+    <footer>
+      <div id="cop">copyright &copy;</div>
+    </footer>
+  </body>
 </html>
