--- a/portfolio.html
+++ b/portfolio.html
@@ -26,23 +26,23 @@
         </div>
         <hr />
         <div class="row1">
-          <div class="tile">
+          <div class="tile" id="c1">
             <p class="title" id="games">Games</p>
           </div>
-          <div class="tile">
+          <div class="tile" id="c2">
             <p class="title" id="pics">Pictures</p>
           </div>
         </div>
         <div class="row1">
-          <div class="tile">
+          <div class="tile" id="c3">
             <p class="title" id="web">Webpages</p>
           </div>
-          <div class="tile">
+          <div class="tile" id="c4">
             <p class="title" id="pin">Pins</p>
           </div>
         </div>
         <div class="row1">
-          <div class="tile">
+          <div class="tile" id="c5">
             <p class="title" id="fav">Favorites</p>
           </div>
         </div>
