finally got the tiles

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,24 +26,29 @@
         </div>
         <hr />
         <div class="row1">
-          <div class="tile" id="c1">
-            <p class="title" id="games">Games</p>
+          <div class="tile">
+            <img src="./assets/images/jellyfish.jpg" alt="Jellfish" />
+            <div class="title">Project 1</div>
           </div>
-          <div class="tile" id="c2">
-            <p class="title" id="pics">Pictures</p>
-          </div>
-        </div>
-        <div class="row1">
-          <div class="tile" id="c3">
-            <p class="title" id="web">Webpages</p>
-          </div>
-          <div class="tile" id="c4">
-            <p class="title" id="pin">Pins</p>
+          <div class="tile">
+            <img src="./assets/images/clifside.jpg" alt="cliff" />
+            <div class="title">Project 2</div>
           </div>
         </div>
         <div class="row1">
-          <div class="tile" id="c5">
-            <p class="title" id="fav">Favorites</p>
+          <div class="tile">
+            <img src="./assets/images/rainbow.jpg" alt="rainbow" />
+            <div class="title">Project 3</div>
+          </div>
+          <div class="tile">
+            <img src="./assets/images/cateyes.jpg" alt="cat" />
+            <div class="title">Project 4</div>
+          </div>
+        </div>
+        <div class="row1">
+          <div class="tile">
+            <img src="./assets/images/waterfall.jpg" alt="waterfall" />
+            <div class="title">Project 5</div>
           </div>
         </div>
       </article>
