worked with ta moved background image to body, used px instead of % for picture words added width to nav for white backgroun

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         </div>
         <hr />
         <div id="content">
-          <img src="./assets/images/20200106_085458.jpg" alt="DaniaKing" />
+          <div>
+            <img src="./assets/images/20200106_085458.jpg" alt="DaniaKing" />
+          </div>
           <p>
             Lorem ipsum dolor sit amet, vocibus mandamus vis ex. Duo ex facer
             salutandi salutatus, agam dignissim sea cu, brute numquam gloriatur
